Pages render as black screen on Nvidia Shield Tablet
Categories
(GeckoView :: General, defect, P3)
Tracking
(firefox79 fixed, firefox80 fixed)
People
(Reporter: ekager, Assigned: gsvelto)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Originally reported: https://github.com/mozilla-mobile/fenix/issues/11394
Steps to reproduce
Navigate to any url in the browser. Also applies when opened as a web view in other apps.
Expected behavior
The page is rendered. This worked up until a couple of weeks ago.
Actual behavior
The page is completely black.
Device information
- Android device: Nvidia Shield Tablet, Android 7.0, Shield tablet software version 5.4
- Fenix version: 5.1.1 (Build 21571851), 42.0.1, 5bf46033e
Reporter | ||
Comment 1•5 years ago
|
||
Helpful user comment identifying around when the regression occurred from https://github.com/mozilla-mobile/fenix/issues/11394#issuecomment-645821507:
Hi,
I am experiencing the same problem but with a slighly different hardware configuration.
Hardware: Xiaomi Mipad 1 Tegra K1 32bit
OS: Android 7.1.2 LineageOS 14.1 with Nvidia Shield blobs
I first noticed the problem after updating Firefox Focus from 8.3.0 (Build #341281935 🦎 76.0-20200429185419) to 8.4.0 (Build #341610024 🦎 77.0-20200602142841).
The release note (What's new) for the update states "Updated Geckoview engine to latest release".
A web search lead me to this thread. I performed more tests with Firefox Preview (fenix) and Firefox Nightly (fennec aurora) to determine when the bug first occured. I wanted to use Firefox Preview Nightly but couldn't find an armeabi-v7a compatible version on ApkMirror for builds later than March 11, 2020 which, by the way, is functional.
I performed the same series of tests as @justinsteffy
- Reboot
- Disable ublock add on
- Try requesting desktop site
- Close all tabs, try private browsing, etc
- Clear data/cache, uninstall and reinstall leaving all settings default
and managed to narrow the search down to the following versions.
Firefox Preview (fenix)
Last working
5.0.0 (Build #21212136)
39.0.1, f19856fa4
GV: 76.0-20200424000239
AS: 0.58.2
Thursday 4/30 @ 9:36 PM
First breaking
5.1.0 (Build #21502228)
42.0.1, 5bf46033e
GV: 77.0-20200526221856
AS: 0.58.2
Friday 5/29 @ 10:28 PM
Firefox Nightly (Fennec Aurora)
Last working
Nightly 200420 06:01 (Build #2015735601)
39.0.20200418130110, 95d71affe
GV: 77.0a1-20200417100143
AS: 0.57.0
Monday 4/20 @ 6:12 AM
First breaking
Nightly 200422 16:13 (Build #2015736065)
39.0.20200422145552, 1ee8c073e
GV: 77.0a1-20200422093542
AS: 0.57.0
Wednesday 4/22 @ 4:17 PM
I hope this helps!
Updated•5 years ago
|
Updated•5 years ago
|
Assignee | ||
Comment 2•5 years ago
|
||
I'm also experiencing this issue on my tablet. It's rooted so I'll try running a regression on it when I have some free time available.
Assignee | ||
Comment 3•5 years ago
|
||
I ran a bisection last night and found that bug 1474281 is the cause for the breakage. I'll try to investigate this today in the hope that it's a simple fix.
Updated•5 years ago
|
Assignee | ||
Comment 4•5 years ago
|
||
So what's happening here is that creating a non-OpenGL ES context here returns an actual context which is then used. This leads to the black page, it seems that nothing is getting rendered at all. If I comment out those lines and force the creation of an OpenGL ES context here everything works fine again.
Not being super-familiar with the code I'm not sure what would be the proper fix, maybe always forcing the creation of an ES context on Android? I get the impression that the creation of non-ES context should always fail on Android so this might be a driver bug with this device. Jeff what do you suggest here?
Assignee | ||
Comment 6•5 years ago
|
||
This works around Android implementations that allow for non-ES contexts
to be created even though they don't work properly.
Updated•5 years ago
|
Comment 8•5 years ago
|
||
bugherder |
Assignee | ||
Comment 10•5 years ago
|
||
I'm waiting for feedback from Fenix users before asking for uplifting this, it'd be nice to have it fixed in the next release. Too bad it couldn't make it in 78.
Assignee | ||
Comment 11•5 years ago
|
||
Comment on attachment 9160307 [details]
Bug 1647172 - Do not attempt to create a non-ES OpenGL context on Android r=jgilbert
Beta/Release Uplift Approval Request
- User impact if declined: No web content is rendered for users of GeckoView-derived browsers with nVidia Shield tablets.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This is a small change that has on impact on other devices as it works around a problem that was specific to this one. The fix has been confirmed to work by multiple users and no regressions have been reported on nightly.
- String changes made/needed: none
Comment 12•5 years ago
|
||
Comment on attachment 9160307 [details]
Bug 1647172 - Do not attempt to create a non-ES OpenGL context on Android r=jgilbert
Approved for 79.0b5.
Comment 13•5 years ago
|
||
bugherder uplift |
Description
•