Bug 1647172 - Do not attempt to create a non-ES OpenGL context on Android r=jgilbert

This works around Android implementations that allow for non-ES contexts
to be created even though they don't work properly.

Differential Revision: https://phabricator.services.mozilla.com/D81666